# streamlit-deployment

./: filtered_netflix_data.csv  main-day4.py  main.py  pyproject.toml
pages/: 1_Content_Overview.py  2_Genre_Analysis.py  3_Country_Insights.py
