[project]
name = "day4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pipreqs>=0.5.0",
    "plotly>=6.6.0",
    "reportlab>=4.4.10",
    "streamlit>=1.54.0",
]
